# macos-profiler

./: Cargo.toml  README.md
src/: main.rs
